--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -95,7 +95,8 @@
         display: flex;
         justify-content: space-between;
       }
-      input {
+      input,
+      select {
         min-width: 8ch;
         width: 28ch;
       }
@@ -168,7 +169,7 @@
                       />
                       <button type="submit">Accept</button>
                       <div submit-success>Accept successful.</div>
-                      <div submit-error>Accept failed.</div>
+                      <div submit-error template="submit_error_template"></div>
                     </form>
                     <form
                       method="post"
@@ -285,7 +286,12 @@
                     </label>
                     <label>
                       Due Date:
-                      <input type="text" name="dueDate" value="{{dueDate}}" />
+                      <input
+                        type="text"
+                        name="dueDate"
+                        value="{{dueDate}}"
+                        pattern="\d{4}-\d{2}-\d{2}"
+                      />
                     </label>
                   </fieldset>
 
@@ -303,16 +309,20 @@
                     <label>
                       Vendor Email:
                       <input
-                        type="text"
+                        type="email"
                         name="vendorEmail"
                         value="{{vendorEmail}}"
-                        pattern="[a-z0-9]*@[a-z0-9]*[\.].[a-z0-9]*"
                       />
                     </label>
 
                     <label>
                       Iban:
-                      <input type="text" name="iban" value="{{iban}}" />
+                      <input
+                        type="text"
+                        name="iban"
+                        value="{{iban}}"
+                        pattern="\b[A-Z]{2}[0-9]{2}(?:[ ]?[0-9]{4}){4}(?!(?:[ ]?[0-9]){3})(?:[ ]?[0-9]{1,2})?\b"
+                      />
                     </label>
 
                     <label>
@@ -321,6 +331,7 @@
                         type="text"
                         name="accountNumber"
                         value="{{accountNumber}}"
+                        pattern="^[0-9]{8}-[0-9]{8}(-[0-9]{8})?$"
                       />
                     </label>
                   </fieldset>
@@ -329,24 +340,41 @@
                     <legend>Prices</legend>
                     <label>
                       Net Price:
-                      <input type="text" name="netPrice" value="{{netPrice}}" />
+                      <input
+                        type="number"
+                        min="0"
+                        step="any"
+                        name="netPrice"
+                        value="{{netPrice}}"
+                      />
                     </label>
                     <label>
                       Gross Price:
                       <input
-                        type="text"
+                        type="number"
+                        min="0"
+                        step="any"
                         name="grossPrice"
                         value="{{grossPrice}}"
                       />
                     </label>
                     <label>
                       Currency:
-                      <input type="text" name="currency" value="{{currency}}" />
+                      <select name="currency">
+                        <option value="{{currency}}" selected>
+                          {{currency}}
+                        </option>
+                        <option value="EUR">EUR</option>
+                        <option value="HUF">HUF</option>
+                        <option value="USD">USD</option>
+                      </select>
                     </label>
                     <label>
                       Vat Amount:
                       <input
-                        type="text"
+                        type="number"
+                        min="0"
+                        step="any"
                         name="vatAmount"
                         value="{{vatAmount}}"
                       />
@@ -374,7 +402,9 @@
                         <label
                           >Amount:
                           <input
-                            type="text"
+                            type="number"
+                            min="0"
+                            step="any"
                             name="service_amount_{{index}}"
                             value="{{amount}}"
                         /></label>
@@ -388,35 +418,47 @@
                         <label
                           >Unit Net Price:
                           <input
-                            type="text"
+                            type="number"
+                            min="0"
+                            step="any"
                             name="service_unitNetprice_{{index}}"
                             value="{{unitNetprice}}"
                         /></label>
                         <label
                           >Net price:
                           <input
-                            type="text"
+                            type="number"
+                            min="0"
+                            step="any"
                             name="service_netPrice_{{index}}"
                             value="{{netPrice}}"
                         /></label>
                         <label
                           >Gross Price:
                           <input
-                            type="text"
+                            type="number"
+                            min="0"
+                            step="any"
                             name="service_grossPrice_{{index}}"
                             value="{{grossPrice}}"
                         /></label>
                         <label
                           >Currency:
-                          <input
-                            type="text"
-                            name="service_currency_{{index}}"
-                            value="{{currency}}"
-                        /></label>
+                          <select name="service_currency_{{index}}">
+                            <option value="{{currency}}" selected>
+                              {{currency}}
+                            </option>
+                            <option value="EUR">EUR</option>
+                            <option value="HUF">HUF</option>
+                            <option value="USD">USD</option>
+                          </select>
+                        </label>
                         <label
                           >Vat Amount:
                           <input
-                            type="text"
+                            type="number"
+                            min="0"
+                            step="any"
                             name="service_vatAmount_{{index}}"
                             value="{{vatAmount}}"
                         /></label>
@@ -471,7 +513,7 @@
           {{/items}}
         </template>
         <template type="amp-mustache" id="submit_error_template">
-          Oops! {{body}}.
+          Oops! {{message}}.
         </template>
       </amp-list>
     </div>
