fix: iban html pattern regex

--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -321,7 +321,7 @@
                         type="text"
                         name="iban"
                         value="{{iban}}"
-                        pattern="\b[A-Z]{2}[0-9]{2}(?:[ ]?[0-9]{4}){4}(?!(?:[ ]?[0-9]){3})(?:[ ]?[0-9]{1,2})?\b"
+                        pattern="\b[A-Z]{2}[0-9]{2}(?:[ -]?[0-9]{4}){4,6}(?!(?:[ ]?[0-9]){3})(?:[ ]?[0-9]{1,2})?\b"
                       />
                     </label>
 
