style: error response

--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -516,9 +516,9 @@
           {{/items}}
         </template>
         <template type="amp-mustache" id="submit_error_template">
-          <div class="save-error">Azthittem fölöltözöl rendesen!</div>
-          <br />
-          <div>{{message}}</div>
+          <div class="save-error">
+            Azthittem fölöltözöl rendesen! {{message}}
+          </div>
         </template>
       </amp-list>
     </div>
