fix: unit net rice editing

--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -192,7 +192,7 @@
                       <input
                         type="hidden"
                         name="filename"
-                        value="{{fileName}}"
+                        value="{{filename}}"
                       />
                       <button
                         type="button"
@@ -243,7 +243,7 @@
                       <div>Name: {{name}}</div>
                       <div>Amount: {{amount}}</div>
                       <div>Unit: {{unit}}</div>
-                      <div>Unit Net Price: {{unitNetprice}}</div>
+                      <div>Unit Net Price: {{unitNetPrice}}</div>
                       <div>Net price: {{netPrice}}</div>
                       <div>Gross Price: {{grossPrice}}</div>
                       <div>Currency: {{currency}}</div>
@@ -424,8 +424,8 @@
                             type="number"
                             min="0"
                             step="any"
-                            name="service_unitNetprice_{{index}}"
-                            value="{{unitNetprice}}"
+                            name="service_unitNetPrice_{{index}}"
+                            value="{{unitNetPrice}}"
                         /></label>
                         <label
                           >Net price:
