--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -151,7 +151,9 @@
                   <div>Iban: {{invoice.iban}}</div>
                   <div>Bank account: {{invoice.accountNumber}}</div>
                   <br />
-                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
+                  <div>
+                    Gross Price: {{invoice.grossPrice}} {{invoice.currency}}
+                  </div>
                 </div>
                 <div class="item-header-actions">
                   <div>
@@ -200,7 +202,11 @@
                       >
                         Reject
                       </button>
-                      <div class="modal" id="{{invoice.invoiceId}}-reject-modal" hidden>
+                      <div
+                        class="modal"
+                        id="{{invoice.invoiceId}}-reject-modal"
+                        hidden
+                      >
                         <div>
                           <div submit-error>Reject failed.</div>
                           <div submit-success>Reject successful.</div>
@@ -226,11 +232,17 @@
               </div>
 
               <div class="item-content">
-                <div>                  
+                <div>
                   <div>Invoice Number: {{invoice.invoiceNumber}}</div>
-                  <div>Net Price: {{invoice.netPrice}} {{invoice.currency}}</div>
-                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
-                  <div>Vat Amount: {{invoice.vatAmount}} {{invoice.currency}}</div>
+                  <div>
+                    Net Price: {{invoice.netPrice}} {{invoice.currency}}
+                  </div>
+                  <div>
+                    Gross Price: {{invoice.grossPrice}} {{invoice.currency}}
+                  </div>
+                  <div>
+                    Vat Amount: {{invoice.vatAmount}} {{invoice.currency}}
+                  </div>
                   <div>Vat Rate: {{invoice.vatRate}}</div>
                   <br />
                   <div>Due: {{invoice.dueDate}}</div>
@@ -257,7 +269,11 @@
               </div>
             </div>
 
-            <div type="hidden" class="item item-edit" id="{{invoice.invoiceId}}-item-edit">
+            <div
+              class="item item-edit"
+              id="{{invoice.invoiceId}}-item-edit"
+              hidden
+            >
               <div class="item-header">
                 <div>
                   <div>{{invoice.invoiceId}} {{invoice.status}}</div>
@@ -282,7 +298,11 @@
                   action-xhr="[[.ApiUrl]]/api/invoices/data?token=[[.Token]]"
                   on="submit-success:invoiceList.refresh"
                 >
-                  <input type="hidden" name="invoiceId" value="{{invoice.invoiceId}}" />
+                  <input
+                    type="hidden"
+                    name="invoiceId"
+                    value="{{invoice.invoiceId}}"
+                  />
                   <fieldset>
                     <legend>Invoice details</legend>
                     <label>
@@ -295,7 +315,11 @@
                     </label>
                     <label>
                       Due Date:
-                      <input type="date" name="dueDate" value="{{invoice.dueDate}}" />
+                      <input
+                        type="date"
+                        name="dueDate"
+                        value="{{invoice.dueDate}}"
+                      />
                     </label>
                   </fieldset>
 
@@ -386,7 +410,11 @@
                     </label>
                     <label>
                       Vat Rate:
-                      <input type="text" name="vatRate" value="{{invoice.vatRate}}" />
+                      <input
+                        type="text"
+                        name="vatRate"
+                        value="{{invoice.vatRate}}"
+                      />
                     </label>
                   </fieldset>
 
@@ -502,7 +530,12 @@
             on="submit-success:invoiceList.refresh"
           >
             {{#items}}
-            <input type="hidden" name="{{invoice.invoiceId}}" value="accept" hidden />
+            <input
+              type="hidden"
+              name="{{invoice.invoiceId}}"
+              value="accept"
+              hidden
+            />
             {{/items}}
             <input type="submit" value="Accept all" />
           </form>
