--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -40,6 +40,7 @@
 
       .item-wrapper {
         padding: 8px;
+        max-width: 700px;
       }
 
       .item {
@@ -95,7 +96,8 @@
         display: flex;
         justify-content: space-between;
       }
-      input {
+      input,
+      select {
         min-width: 8ch;
         width: 28ch;
       }
@@ -112,6 +114,9 @@
       }
       .hidden {
         display: none;
+      }
+      .save-error {
+        color: red;
       }
     </style>
   </head>
@@ -147,13 +152,15 @@
                   <div>Iban: {{invoice.iban}}</div>
                   <div>Bank account: {{invoice.accountNumber}}</div>
                   <br />
-                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
+                  <div>
+                    Gross Price: {{invoice.grossPrice}} {{invoice.currency}}
+                  </div>
                 </div>
                 <div class="item-header-actions">
                   <div>
                     <form
                       method="post"
-                      action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+                      action-xhr="[[.ApiUrl]]/api/invoices/status?token=[[.Token]]"
                       on="submit-success:invoiceList.refresh"
                     >
                       <input
@@ -172,7 +179,7 @@
                     </form>
                     <form
                       method="post"
-                      action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+                      action-xhr="[[.ApiUrl]]/api/invoices/status?token=[[.Token]]"
                       on="submit-success:invoiceList.refresh"
                     >
                       <input
@@ -188,7 +195,7 @@
                       <input
                         type="hidden"
                         name="filename"
-                        value="{{invoice.fileName}}"
+                        value="{{invoice.filename}}"
                       />
                       <button
                         type="button"
@@ -196,7 +203,11 @@
                       >
                         Reject
                       </button>
-                      <div class="modal" id="{{invoice.invoiceId}}-reject-modal" hidden>
+                      <div
+                        class="modal"
+                        id="{{invoice.invoiceId}}-reject-modal"
+                        hidden
+                      >
                         <div>
                           <div submit-error>Reject failed.</div>
                           <div submit-success>Reject successful.</div>
@@ -222,11 +233,17 @@
               </div>
 
               <div class="item-content">
-                <div>                  
+                <div>
                   <div>Invoice Number: {{invoice.invoiceNumber}}</div>
-                  <div>Net Price: {{invoice.netPrice}} {{invoice.currency}}</div>
-                  <div>Gross Price: {{invoice.grossPrice}} {{invoice.currency}}</div>
-                  <div>Vat Amount: {{invoice.vatAmount}} {{invoice.currency}}</div>
+                  <div>
+                    Net Price: {{invoice.netPrice}} {{invoice.currency}}
+                  </div>
+                  <div>
+                    Gross Price: {{invoice.grossPrice}} {{invoice.currency}}
+                  </div>
+                  <div>
+                    Vat Amount: {{invoice.vatAmount}} {{invoice.currency}}
+                  </div>
                   <div>Vat Rate: {{invoice.vatRate}}</div>
                   <br />
                   <div>Due: {{invoice.dueDate}}</div>
@@ -239,7 +256,7 @@
                       <div>Name: {{name}}</div>
                       <div>Amount: {{amount}}</div>
                       <div>Unit: {{unit}}</div>
-                      <div>Unit Net Price: {{unitNetprice}}</div>
+                      <div>Unit Net Price: {{unitNetPrice}}</div>
                       <div>Net price: {{netPrice}}</div>
                       <div>Gross Price: {{grossPrice}}</div>
                       <div>Currency: {{currency}}</div>
@@ -253,7 +270,11 @@
               </div>
             </div>
 
-            <div class="item item-edit" id="{{invoice.invoiceId}}-item-edit" hidden>
+            <div
+              class="item item-edit"
+              id="{{invoice.invoiceId}}-item-edit"
+              hidden
+            >
               <div class="item-header">
                 <div>
                   <div>{{invoice.invoiceId}} {{invoice.status}}</div>
@@ -275,13 +296,16 @@
               <div class="item-content">
                 <form
                   method="post"
-                  action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+                  action-xhr="[[.ApiUrl]]/api/invoices/data?token=[[.Token]]"
                   on="submit-success:invoiceList.refresh"
                 >
-                  <input type="text" value="{{invoice.invoiceId}}" hidden />
+                  <input
+                    type="hidden"
+                    name="invoiceId"
+                    value="{{invoice.invoiceId}}"
+                  />
                   <fieldset>
                     <legend>Invoice details</legend>
-
                     <label>
                       Invoice Number:
                       <input
@@ -292,7 +316,11 @@
                     </label>
                     <label>
                       Due Date:
-                      <input type="text" name="dueDate" value="{{invoice.dueDate}}" />
+                      <input
+                        type="date"
+                        name="dueDate"
+                        value="{{invoice.dueDate}}"
+                      />
                     </label>
                   </fieldset>
 
@@ -310,16 +338,20 @@
                     <label>
                       Vendor Email:
                       <input
-                        type="text"
+                        type="email"
                         name="vendorEmail"
                         value="{{invoice.vendorEmail}}"
-                        pattern="[a-z0-9]*@[a-z0-9]*[\.].[a-z0-9]*"
                       />
                     </label>
 
                     <label>
                       Iban:
-                      <input type="text" name="iban" value="{{invoice.iban}}" />
+                      <input
+                        type="text"
+                        name="iban"
+                        value="{{invoice.iban}}"
+                        pattern="\b[A-Z]{2}[0-9]{2}(?:[- ]?[0-9]{4}){4,6}(?!(?:[ ]?[0-9]){3})(?:[ ]?[0-9]{1,2})?\b"
+                      />
                     </label>
 
                     <label>
@@ -327,6 +359,7 @@
                       <input
                         type="text"
                         name="accountNumber"
+                        pattern="^[0-9]{8}[\D]*[0-9]{8}([\D]*[0-9]{8})?$"
                         value="{{invoice.accountNumber}}"
                       />
                     </label>
@@ -336,31 +369,52 @@
                     <legend>Prices</legend>
                     <label>
                       Net Price:
-                      <input type="text" name="netPrice" value="{{invoice.netPrice}}" />
+                      <input
+                        type="number"
+                        min="0"
+                        step="any"
+                        name="netPrice"
+                        value="{{invoice.netPrice}}"
+                      />
                     </label>
                     <label>
                       Gross Price:
                       <input
-                        type="text"
+                        type="number"
+                        min="0"
+                        step="any"
                         name="grossPrice"
                         value="{{invoice.grossPrice}}"
                       />
                     </label>
                     <label>
                       Currency:
-                      <input type="text" name="currency" value="{{invoice.currency}}" />
+                      <select name="currency">
+                        <option value="{{invoice.currency}}" selected>
+                          {{currency}}
+                        </option>
+                        <option value="EUR">EUR</option>
+                        <option value="HUF">HUF</option>
+                        <option value="USD">USD</option>
+                      </select>
                     </label>
                     <label>
                       Vat Amount:
                       <input
-                        type="text"
+                        type="number"
+                        min="0"
+                        step="any"
                         name="vatAmount"
                         value="{{invoice.vatAmount}}"
                       />
                     </label>
                     <label>
                       Vat Rate:
-                      <input type="text" name="vatRate" value="{{invoice.vatRate}}" />
+                      <input
+                        type="text"
+                        name="vatRate"
+                        value="{{invoice.vatRate}}"
+                      />
                     </label>
                   </fieldset>
 
@@ -375,62 +429,73 @@
                           >Name:
                           <input
                             type="text"
-                            name="service_{{name}}_name"
+                            name="service_name_{{index}}"
                             value="{{name}}"
                         /></label>
                         <label
                           >Amount:
                           <input
-                            type="text"
-                            name="service_{{name}}_amount"
+                            type="number"
+                            min="0"
+                            step="any"
+                            name="service_amount_{{index}}"
                             value="{{amount}}"
                         /></label>
                         <label
                           >Unit:
                           <input
                             type="text"
-                            name="service_{{name}}_unit"
+                            name="service_unit_{{index}}"
                             value="{{unit}}"
                         /></label>
                         <label
                           >Unit Net Price:
                           <input
-                            type="text"
-                            name="service_{{name}}_unitNetprice"
-                            value="{{unitNetprice}}"
+                            type="number"
+                            step="any"
+                            name="service_unitNetPrice_{{index}}"
+                            value="{{unitNetPrice}}"
                         /></label>
                         <label
                           >Net price:
                           <input
-                            type="text"
-                            name="service_{{name}}_netPrice"
+                            type="number"
+                            step="any"
+                            name="service_netPrice_{{index}}"
                             value="{{netPrice}}"
                         /></label>
                         <label
                           >Gross Price:
                           <input
-                            type="text"
-                            name="service_{{name}}_grossPrice"
+                            type="number"
+                            step="any"
+                            name="service_grossPrice_{{index}}"
                             value="{{grossPrice}}"
                         /></label>
                         <label
                           >Currency:
-                          <input
-                            type="text"
-                            name="service_{{name}}_currency"
-                            value="{{currency}}"
-                        /></label>
+                          <select name="service_currency_{{index}}">
+                            <option value="{{currency}}" selected>
+                              {{currency}}
+                            </option>
+                            <option value="EUR">EUR</option>
+                            <option value="HUF">HUF</option>
+                            <option value="USD">USD</option>
+                          </select>
+                        </label>
                         <label
                           >Vat Amount:
                           <input
-                            type="text"
-                            name="service_{{name}}_vatAmount"
+                            type="number"
+                            min="0"
+                            step="any"
+                            name="service_vatAmount_{{index}}"
                             value="{{vatAmount}}"
                         /></label>
                         <label
                           >Vat Rate:<input
                             type="text"
-                            name="service_{{name}}_vatRate"
+                            name="service_vatRate_{{index}}"
                             value="{{vatRate}}"
                         /></label>
                       </div>
@@ -446,6 +511,9 @@
                     >
                       Cancel
                     </button>
+                    <div submitting>Save in progress.</div>
+                    <div submit-success>Save successful.</div>
+                    <div submit-error template="submit_error_template"></div>
                   </div>
                 </form>
               </div>
@@ -459,7 +527,7 @@
             on="submit-success:invoiceList.refresh"
           >
             {{#items}}
-            <input type="hidden" name="{{invoice.invoiceId}}" value="accept" hidden />
+            <input type="hidden" name="{{invoice.invoiceId}}" value="accept" />
             {{/items}}
             <input type="submit" value="Accept all" />
           </form>
@@ -473,6 +541,11 @@
           >
           </amp-img>
           {{/items}}
+        </template>
+        <template type="amp-mustache" id="submit_error_template">
+          <div class="save-error">
+            Azthittem fölöltözöl rendesen! {{message}}
+          </div>
         </template>
       </amp-list>
     </div>
