--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -128,6 +128,7 @@
     </div>
 
     <div>
+      <button on="tap:invoiceList.refresh">Refresh</button>
       <amp-list
         src="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
         id="invoiceList"
@@ -135,7 +136,7 @@
         layout="fixed-height"
         single-item
         items="."
-        height="10"
+        height="50"
       >
         <template type="amp-mustache">
           {{#items}}
