feat: red bg on error

--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -121,6 +121,9 @@
       .pendingTransferLoading {
         background-color: #6e6b11;
       }
+      .pendingTransferError {
+        background-color: red;
+      }
     </style>
   </head>
 
