feat: footer message position fix

--- a/src/amp/templates/summary_email.html
+++ b/src/amp/templates/summary_email.html
@@ -1191,7 +1191,7 @@
             </form>
           </div>
           {{^items}}
-          <div>Nincs több pàlinka. Elfogyott.</div>
+          <div class="">Nincs több pàlinka. Elfogyott.</div>
           <amp-img
             alt="Pocok logo"
             src="[[.PocokLogo]]"
